# openlibrary-shelfie

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: PORT_HISTORY.md
shelfie/: __init__.py  cli.py  client.py  ui.py
tests/: test_shelfie.py
